--- a/app/Resources/views/product/show.html.twig
+++ b/app/Resources/views/product/show.html.twig
@@ -3,6 +3,10 @@
 {% block body %}
     <h1>{{ product.name }}</h1>
 
+    <form action="{{ path('order_add_product_to_cart', {'slug': product.slug}) }}" method="POST">
+        <button type="submit">Add to Cart</button>
+    </form>
+
     <strong>{{ product.price }}</strong>
 
     <img width="100" src="{{ asset('uploads/'~product.imageFilename) }}" />
