--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -2,8 +2,12 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
+        <title>{% block title %}Sheep Shear Club{% endblock %}</title>
+        {% block stylesheets %}
+            <link href="{{ asset('css/bootstrap.min.css') }}" rel="stylesheet">
+            <link href="{{ asset('css/styles.css') }}" rel="stylesheet">
+            <link href="{{ asset('css/styles.css') }}" rel="stylesheet">
+        {% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
@@ -11,7 +15,54 @@
             <div class="alert alert-info">{{ msg }}</div>
         {% endfor %}
 
+        <nav class="navbar navbar-default navbar-fixed-top">
+          <div class="container">
+            <div class="navbar-header navbar-left">
+              <a class="navbar-brand" href="{{ path('homepage')}}">Sheep Shear Club</a>
+            </div>
+            <img class="ssc-logo center-block" src="{{ asset('uploads/sheep-shear-club-logo.png') }}"/>
+            <div id="navbar" class="navbar-right">
+              <ul class="nav navbar-nav">
+                  <li><a href="{{ path('pricing_show')}}">Pricing</a></li>
+                <li><a href="{{ path('order_checkout')}}"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span> Checkout</a></li>
+              </ul>
+            </div><!--/.nav-collapse -->
+          </div>
+        </nav>
+
         {% block body %}{% endblock %}
+
+        <footer class="footer footer-styling">
+    <div class="container">
+        <div class="row">
+            {% block footer_content %}
+            <div class="col-xs-7 col-sm-4">
+                <div class="row">
+                    <div class="col-xs-6">
+                        <ul class="list-unstyled footer-link">
+                            <li><a class="footer-link" href="{{ path('homepage')}}">Sheep Shear Club</a>
+                        </ul>
+                    </div>
+
+                </div>
+            </div>
+            <div class="col-xs-5 col-sm-4">
+                <div class="social-icons">
+                    <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/KnpUniversity">
+                        <i class="fa fa-twitter"></i>
+                    </a>
+                    <a class="btn btn-social-icon btn-facebook" href="http://facebook.com/Knplabs">
+                        <i class="fa fa-facebook"></i>
+                    </a>
+                    <a class="btn btn-social-icon btn-github" href="http://github.com/knpuniversity">
+                        <i class="fa fa-github"></i>
+                    </a>
+                </div>
+            </div>
+            {% endblock %}
+        </div>
+    </div>
+</footer>
         {% block javascripts %}{% endblock %}
     </body>
 </html>
