another big commit!

--- a/app/Resources/views/default/homepage.html.twig
+++ b/app/Resources/views/default/homepage.html.twig
@@ -2,6 +2,23 @@
 
 {% block body %}
 <div class="hero-space">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <h1 class="hero-space-headline">Artisinal Shearing for the Dapper Sheep</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-6">
+                <h2 class="hero-space-text">Before</h2>
+                <img class="center-block" src="{{ asset('uploads/before.png') }}"/>
+            </div>
+            <div class="col-xs-6">
+                <h2 class="hero-space-text">After</h2>
+                <img class="center-block" src="{{ asset('uploads/after.png') }}"/>
+            </div>
+        </div>
+    </div>
 </div>
 
 </div>
