--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -7,8 +7,9 @@
             <link href="{{ asset('css/bootstrap.min.css') }}" rel="stylesheet">
             <link href="{{ asset('css/styles.css') }}" rel="stylesheet">
             <link href="{{ asset('css/styles.css') }}" rel="stylesheet">
+            <link href='https://fonts.googleapis.com/css?family=Lobster+Two' rel='stylesheet' type='text/css'>
         {% endblock %}
-        <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+        <link rel="icon" type="image/x-icon" href="{{ asset('favicon.png') }}" />
     </head>
     <body>
         {% for msg in app.session.flashBag.get('success') %}
@@ -36,7 +37,7 @@
     <div class="container">
         <div class="row">
             {% block footer_content %}
-            <div class="col-xs-7 col-sm-4">
+            <div class="col-xs-7 col-sm-9">
                 <div class="row">
                     <div class="col-xs-6">
                         <ul class="list-unstyled footer-link">
@@ -46,16 +47,12 @@
 
                 </div>
             </div>
-            <div class="col-xs-5 col-sm-4">
+            <div class="col-xs-5 col-sm-3">
                 <div class="social-icons">
-                    <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/KnpUniversity">
-                        <i class="fa fa-twitter"></i>
-                    </a>
-                    <a class="btn btn-social-icon btn-facebook" href="http://facebook.com/Knplabs">
-                        <i class="fa fa-facebook"></i>
-                    </a>
-                    <a class="btn btn-social-icon btn-github" href="http://github.com/knpuniversity">
-                        <i class="fa fa-github"></i>
+
+                    <a href="#">
+                        <p class="instagram-text">Share your new look with us:</p>
+                        <img class="instagram" src="{{ asset('uploads/instagram.png') }}"/>
                     </a>
                 </div>
             </div>
