--- a/app/Resources/views/product/show.html.twig
+++ b/app/Resources/views/product/show.html.twig
@@ -20,7 +20,7 @@
                 <div class="product-show-details-container product-description">
                     <p>{{ product.description }}</p>
                     <form action="{{ path('order_add_product_to_cart', {'slug': product.slug}) }}" method="POST">
-                        <button class="btn btn-sm btn-success" type="submit">Add to Cart</button>
+                        <button class="btn btn-md btn-success" type="submit">Add to Cart</button>
                     </form>
                 </div>
             </div>
