--- a/app/Resources/views/product/show.html.twig
+++ b/app/Resources/views/product/show.html.twig
@@ -2,7 +2,7 @@
 {% block title %} {{ product.name }} {% endblock %}
 
 {% block body %}
-<div class="product-space">
+<div class="nav-space">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
