--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -58,7 +58,7 @@ body {
     PRODUCT SHOW PAGE
 ====================*/
 
-.product-space {
+.nav-space {
     margin-top: 150px;
 }
 
@@ -162,7 +162,7 @@ body {
     background-color: #f5f5f5;
     bottom: 0;
     width: 100%;
-    height: 150px;
+    height: 50px;
     padding: 10px;
 }
 
@@ -176,7 +176,8 @@ body {
 }
 
 .footer-link {
-    color: #6d665c;
+    color: #000;
+    display: inline-block;
 }
 
 .footer-link li a {
@@ -197,13 +198,14 @@ transition: all 0.5s ease;
 }
 
 a>.instagram-text {
-    color: #6d665c;
+    color: #000;
     display: inline-block;
+    padding-right: 10px;
 }
 
 .instagram {
-    padding-top: 10px;
-    height: 25px;
+    padding-top: 12px;
+    height: 30px;
     width: auto;
     float: right;
 }
