--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -3,7 +3,7 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
 {% block body %}
-<div class="product-space">
+<div class="nav-space">
     <div class="container">
         <div class="row">
             <div class="col-xs-8">
@@ -17,8 +17,8 @@
                     <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
 
                     <div class="form-group">
-                        <label for="username">Username</label>
-                        <input type="text" name="_username" class="form-control" id="username" placeholder="Username">
+                        <label for="email">Email</label>
+                        <input type="email" name="_username" class="form-control" id="email" placeholder="Username">
                     </div>
 
                     <div class="form-group">
