--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -18,12 +18,13 @@
 
                     <div class="form-group">
                         <label for="email">Email</label>
-                        <input type="email" name="_username" class="form-control" id="email" placeholder="Username">
+                        <input type="email" name="_username" class="form-control" id="email" placeholder="Username" value="sleek_sheep1@example.com">
                     </div>
 
                     <div class="form-group">
                         <label for="password">Password</label>
-                        <input type="password" name="_password" class="form-control"  id="password" placeholder="Password">
+                        <!-- not a password field to keep the tutorial simple -->
+                        <input type="text" name="_password" class="form-control"  id="password" placeholder="Password">
                     </div>
 
                     <div class="checkbox">
