--- a/app/Resources/views/order/_cardForm.html.twig
+++ b/app/Resources/views/order/_cardForm.html.twig
@@ -1,4 +1,4 @@
-<form action="" method="POST">
+<form action="" method="POST" class="checkout-form">
     <div class="row">
         <div class="col-xs-8 col-sm-6 col-sm-offset-2 form-group">
             <div class="input-group">
