shorten placeholder text

--- a/app/Resources/views/order/_cardForm.html.twig
+++ b/app/Resources/views/order/_cardForm.html.twig
@@ -46,7 +46,7 @@
                 <span class="input-group-addon">
                      <i class="fa fa-map-marker"></i>
                  </span>
-                <input type="text" autocomplete="off" class="form-control" id="card-zip" placeholder="Zip Code"/>
+                <input type="text" autocomplete="off" class="form-control" id="card-zip" placeholder="Zip"/>
             </div>
         </div>
     </div>
