adding some placeholders for JS

--- a/app/Resources/views/order/_cardForm.html.twig
+++ b/app/Resources/views/order/_cardForm.html.twig
@@ -53,7 +53,13 @@
 
     <div class="row">
         <div class="col-xs-8 col-sm-6 col-sm-offset-2 text-center">
-            <button type="submit" class="btn btn-lg btn-danger">
+            <div class="alert alert-danger js-checkout-error hidden"></div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-xs-8 col-sm-6 col-sm-offset-2 text-center">
+            <button type="submit" class="js-submit-button btn btn-lg btn-danger">
                 Checkout
             </button>
         </div>
