--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -24,6 +24,11 @@
             <img class="ssc-logo center-block" src="{{ asset('uploads/sheep-shear-club-logo.png') }}"/>
             <div id="navbar" class="navbar-right">
               <ul class="nav navbar-nav">
+                  {% if is_granted('ROLE_USER') %}
+                    <li><a href="{{ path('fos_user_security_logout') }}">Logout</a></li>
+                  {% else %}
+                    <li><a href="{{ path('fos_user_security_login') }}">Login</a></li>
+                  {% endif %}
                   <li><a href="{{ path('pricing_show')}}">Pricing</a></li>
                 <li><a href="{{ path('order_checkout')}}"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span> Checkout</a></li>
               </ul>
