--- a/app/Resources/views/default/homepage.html.twig
+++ b/app/Resources/views/default/homepage.html.twig
@@ -5,7 +5,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <h1 class="hero-space-headline">Artisinal Shearing for the Dapper Sheep</h1>
+                <h1 class="hero-space-headline">Artisanal Shearing for the Dapper Sheep</h1>
             </div>
         </div>
         <div class="row">
