fixing indentation and tweaking anchor tag so it's easier to fit adding href on screen later

--- a/app/Resources/views/product/pricing.html.twig
+++ b/app/Resources/views/product/pricing.html.twig
@@ -11,23 +11,27 @@
     <div class="row">
         <div class="col-md-6">
             <div class="price-square">
-            <p class="pricing-length-header monthly text-center">Farmer Brent</p>
-            <div class="pricing-info-padding">
-                <p class="price text-center">$20</p>
-                <p class="text-center">A fresh set of shears monthly along with our beloved after-shear in one of two fragrances!</p>
-            </div>
-            <a class="btn btn-warning center-block price-btn" href="#">Shear Me!</a>
+                <p class="pricing-length-header monthly text-center">Farmer Brent</p>
+                <div class="pricing-info-padding">
+                    <p class="price text-center">$20</p>
+                    <p class="text-center">A fresh set of shears monthly along with our beloved after-shear in one of two fragrances!</p>
+                </div>
+                <a href="#" class="btn btn-warning center-block price-btn">
+                    Shear Me!
+                </a>
             </div>
         </div>
 
         <div class="col-md-6">
             <div class="price-square price-square-yearly">
-            <p class="pricing-length-header yearly text-center">New Zealander</p>
-            <div class="pricing-info-padding">
-                <p class="price text-center">$50</p>
-                <p class="text-center">The perks of a Farmer Brent membership, but with a fresh bottle of conditioner and a comb each month!</p>
-            </div>
-            <a class="btn btn-warning center-block price-btn" href="#">Get Shearing!</a>
+                <p class="pricing-length-header yearly text-center">New Zealander</p>
+                <div class="pricing-info-padding">
+                    <p class="price text-center">$50</p>
+                    <p class="text-center">The perks of a Farmer Brent membership, but with a fresh bottle of conditioner and a comb each month!</p>
+                </div>
+                <a href="#" class="btn btn-warning center-block price-btn">
+                    Get Shearing!
+                </a>
             </div>
         </div>
 
