--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -17,23 +17,35 @@
         {% endfor %}
 
         <nav class="navbar navbar-default navbar-fixed-top">
-          <div class="container">
-            <div class="navbar-header navbar-left">
-              <a class="navbar-brand" href="{{ path('homepage')}}">Sheep Shear Club</a>
+            <div class="container">
+                <div class="navbar-header navbar-left">
+                    <a class="navbar-brand" href="{{ path('homepage') }}">
+                        SheepShear Club
+                    </a>
+                </div>
+                <img class="ssc-logo center-block" src="{{ asset('uploads/sheep-shear-club-logo.png') }}"/>
+                <div id="navbar" class="navbar-right">
+                    <ul class="nav navbar-nav">
+                        {% if is_granted('ROLE_USER') %}
+                            <li>
+                                <a href="{{ path('fos_user_security_logout') }}">Logout</a>
+                            </li>
+                        {% else %}
+                            <li>
+                                <a href="{{ path('fos_user_security_login') }}">Login</a>
+                            </li>
+                        {% endif %}
+                        <li>
+                            <a href="{{ path('pricing_show') }}">Pricing</a>
+                        </li>
+                        <li>
+                            <a href="{{ path('order_checkout') }}">
+                                <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span> Checkout
+                            </a>
+                        </li>
+                    </ul>
+                </div><!--/.nav-collapse -->
             </div>
-            <img class="ssc-logo center-block" src="{{ asset('uploads/sheep-shear-club-logo.png') }}"/>
-            <div id="navbar" class="navbar-right">
-              <ul class="nav navbar-nav">
-                  {% if is_granted('ROLE_USER') %}
-                    <li><a href="{{ path('fos_user_security_logout') }}">Logout</a></li>
-                  {% else %}
-                    <li><a href="{{ path('fos_user_security_login') }}">Login</a></li>
-                  {% endif %}
-                  <li><a href="{{ path('pricing_show')}}">Pricing</a></li>
-                <li><a href="{{ path('order_checkout')}}"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span> Checkout</a></li>
-              </ul>
-            </div><!--/.nav-collapse -->
-          </div>
         </nav>
 
         {% block body %}{% endblock %}
